--- a/ckanext/bankofengland/templates/package/resource_footnotes.html
+++ b/ckanext/bankofengland/templates/package/resource_footnotes.html
@@ -18,7 +18,7 @@
       {% asset 'bankofengland/bankofengland-js' %}
     {% endblock %}
 
-    <table id="footnote-table" class="table table-striped table-bordered footnote-table">
+    <table id="footnote-table" name="footnote-table" class="table table-bordered footnote-table">
       <thead>
         <tr>
           <th>Row</th>
@@ -31,20 +31,21 @@
       <tbody>
       {% if footnotes %}
         {% for footnote in footnotes %}
-          {# We need distinct ids for each row. We can't use footnotes for this because footnote ids don't exist for new footnotes. Lets generate a random hash #}
           {% set row_id = h.generate_uuid() %}
+          <input type="hidden" name="footnote-id-{{ row_id }}" id="footnote-id-{{ row_id }}" value="{{ footnote.id }}">
           <tr>
             {# Add a dropdown select for "Row". The options should be the values from "row_values" #}
             <td>
               <select class="footnote-row" name="footnote-row-{{ row_id }}" id="footnote-row-{{ row_id }}" style="max-width: 100%; border: 1px solid #ccc; background-color: white;">
+              <option class="footnote-row-option" value="" {% if '' == footnote.row %}selected{% endif %} style="background-color: #fff;"></option>
               {% for row_value in row_values %}
-                <option class="footnote-row-option" value="{{ row_value }}" {% if row_value == footnote.row %}selected{% endif %}>{{ row_value }}</option>
+                <option class="footnote-row-option" value="{{ row_value }}" {% if row_value == footnote.row %}selected{% endif %} style="background-color: #fff;">{{ row_value }}</option>
               {% endfor %}
               </select>
             </td>
             <td><input class="footnote-column" name="footnote-column-{{ row_id }}" id="footnote-column-{{ row_id }}" type="text" value="{{ footnote.column }}" style="max-width: 100%; border: 1px solid #ccc;"></td>
             <td><textarea class="footnote-text" name="footnote-text-{{ row_id }}" id="footnote-text-{{ row_id }}" rows="2" style="width: 100%; border: 1px solid #ccc;">{{ footnote.footnote }}</textarea></td>
-            {% set deleted_footnote = h.to_json({'row_id': row_id, 'column': footnote.footnote, 'footnote': footnote.footnote}) %}
+            {% set deleted_footnote = h.to_json({'row_id': row_id, 'column': footnote.column, 'footnote': footnote.footnote, 'footnote_id': footnote.id }) %}
             <td><button class="btn btn-danger delete-footnote-row" type="button" id="delete-footnote-row-{{ row_id }}" data="{{ deleted_footnote }}">Delete</button></td>
           </tr>
         {% endfor %}
