--- a/ckanext/bankofengland/templates/package/group_list.html
+++ b/ckanext/bankofengland/templates/package/group_list.html
@@ -6,10 +6,10 @@
 
   {% if group_dropdown %}
     <form class="add-to-group" method="post">
-      {% set groups = h.add_group_names_to_dropdown(group_dropdown) %}
+      {% set groups = h.add_group_names_to_dropdown() %}
       <select id="field-add_group" name="group_added" data-module="autocomplete">
         {% for option in groups %}
-          <option value="{{ option[0] }}"> {{ option[2] }}</option>
+          <option value="{{ option["id"] }}"> {{ option["path"] }}</option>
         {% endfor %}
       </select>
       <button type="submit" class="btn btn-primary" title="{{ _('Associate this group with this dataset') }}">{{ _('Add to group') }}</button>
